<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop = "true"
        android:layout_marginLeft="@dimen/button_marginLeft"
        android:layout_marginStart="@dimen/button_marginLeft"
        android:text="@string/button_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button"
        android:layout_toEndOf="@id/button"
        android:text="@string/button2_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button2"
        android:layout_toEndOf="@id/button2"
        android:text="@string/button3_text"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ContentDescription" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below ="@id/button"
        android:background="@drawable/search_text_style" />


    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/searchView"
        android:layout_margin="10dp"
        android:background="@drawable/card_text_style">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop = "true"
            android:text="@string/date_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/name_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below ="@id/date"
            android:text="@string/description_text"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below ="@id/description"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tag_name"
            android:textColor="#B00020"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below ="@id/description"
            android:layout_toLeftOf="@id/tag"
            android:layout_toStartOf="@id/tag"
            android:text="@string/tag2_text"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_add" />
</RelativeLayout>